// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`consume example platform 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuelifligcdkplatformNamespaceTestplatformplatformNameTestalarmtopicarnC96584B6F00A464EAD1953AFF4B05118Parameter": Object {
      "Default": "/liflig-cdk/platformNamespaceTest/platform/platformNameTest/alarm-topic-arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "ExampleParam05F8FCAC": Object {
      "Properties": Object {
        "Type": "String",
        "Value": Object {
          "Ref": "SsmParameterValuelifligcdkplatformNamespaceTestplatformplatformNameTestalarmtopicarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`produce example plaform 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "PlatformProduceralarmtopicarnC48B2B79": Object {
      "Properties": Object {
        "Name": "/liflig-cdk/platformNamespaceTest/platform/platformNameTest/alarm-topic-arn",
        "Type": "String",
        "Value": Object {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "TopicBFC7AF6E": Object {
      "Properties": Object {
        "DisplayName": "Alarm topic",
        "TopicName": "alarmtopic",
      },
      "Type": "AWS::SNS::Topic",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
